extensioon of history

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -20,7 +20,8 @@
 %  * historical notes proving many concepts are as novel as they may appear 
 %  * filled the demand for some starting overview of the common structures
 %  * stress the importance of spatial dispersion
-%  * unification of mm and phc concepts
+%  * unification of MM and PhC concepts
+%  * attempt for clarification of these two terms
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures
