--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2209,6 +2209,48 @@ lts.fzu.cz/pdf/d-js.pdf
   pages={18--26},
   year={2013}
 }
+@article{basharin2013epsilon,
+  title={Epsilon near zero based phenomena in metamaterials},
+  author={Basharin, Alexey A and Mavidis, Charalampos and Kafesaki, Maria and Economou, Eleftherios N and Soukoulis, Costas M},
+  journal={Physical Review B},
+  volume={87},
+  number={15},
+  pages={155130},
+  year={2013},
+  publisher={APS}
+}
+@article{kerker1975invisible,
+  title={Invisible bodies},
+  author={Kerker, Milton},
+  journal={JOSA},
+  volume={65},
+  number={4},
+  pages={376--379},
+  year={1975},
+  publisher={Optical Society of America}
+}
+@article{schurig2006metamaterial,
+  title={Metamaterial electromagnetic cloak at microwave frequencies},
+  author={Schurig, David and Mock, JJ and Justice, BJ and Cummer, Steven A and Pendry, John B and Starr, AF and Smith, DR},
+  journal={Science},
+  volume={314},
+  number={5801},
+  pages={977--980},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+@article{valentine2009optical,
+  title={An optical cloak made of dielectrics},
+  author={Valentine, Jason and Li, Jensen and Zentgraf, Thomas and Bartal, Guy and Zhang, Xiang},
+  journal={Nature materials},
+  volume={8},
+  number={7},
+  pages={568--571},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
+
 
 
 
