--- a/conclusion.tex
+++ b/conclusion.tex
@@ -25,20 +25,18 @@
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures
-%      3) the s-parameter method, although used, does not always give correct results
+%      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
-%  * provide the simulation environment which facilitates correct computations
+%  * provide the simulation environment which facilitates correct computations, 
+%    and solves the phase-ambiguity in the s-parameter method in particular
 
-%% NOTES: What WAS NOT discussed in the thesis
-%% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
-%% * mention tunability?       Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved. ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
+%% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
+%% * quasicrystals and disorder, 
+%% * chiral media, bianisotropy and gyrotropy, 
+%			Further, also the effects of more general properties of the constituent materials could be investigated, but this would require expanding the source code of the FDTD simulation library used (i.e., MEEP). While anisotropy and optical activity would be welcome, the particularly interesting option is gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors  that breaks time-reversal symmetry. This would open the wide research possibilies of non-reciprocal metamaterial devices.
+%% * structures with nonlinearity or loss,    
+%% * tunable structures:		Where appropriate, we also investigated?? how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved. 
 
-
-
-Things that could be pursued further on the basis of the presented work:
-observe bianisotropy of the metamaterial particles
-
-Further, also the effects of more general properties of the constituent materials could be investigated, but this would require expanding the source code of the FDTD simulation library used (i.e., MEEP). While anisotropy and optical activity would be welcome, the particularly interesting option is gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors  that breaks time-reversal symmetry. This would open the wide research possibilies of non-reciprocal metamaterial devices.
 
 
 
@@ -114,6 +112,3 @@ All referred numerical methods, FDTD, PWEM and TMM, were tested also to give com
 %%27. A. Bratkovsky, E. Ponizovskaya, S. Y Wang, P. Holmstr ̈m, L. Thyl ́n, Y. Fu, and o e H.  ̊gren, “A Metal-wire/Quantum-dot Composite Metamaterial with Negative ǫ and A Compensated Optical Loss,” Appl. Phys. Lett. 93, 193106 (2008).
 %%28. Y. Zeng, Q. Wu and D. H. Werner, “Electrostatic Theory for Designing Lossless Negative Permittivity Metamaterials,” Opt. Lett. 35, 1431 (2010).
 
-This work was supported by the Czech Science Foundation under Grant No. 14-25639S.
-
-\mdf{Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP program \cite{johnson2001mpb}. Harmonic inversion was used based on the FDM algorithm \cite{mandelshtam1997harmonic}}
