--- a/title.tex
+++ b/title.tex
@@ -95,4 +95,11 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \thispagestyle{empty} \newpage
 % --------------------------------------------------------------------------------
 \chapter*{Acknowledgements}
+\todo{+}
+
+The numerical results presented could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. Harmonic inversion was used based on the FDM algorithm \cite{mandelshtam1997harmonic}.
+
+This work was supported by the Czech Science Foundation under Grant No. 14-25639S.
+
+
 \thispagestyle{empty} \newpage
