--- a/theory.tex
+++ b/theory.tex
@@ -1239,6 +1239,7 @@ An example of a recent \cite{zhao2009repulsive}, but somewhat controversial \cit
 \subsection{Second unification: metamaterials with photonic crystals} 
 %Ad_Monsoriu:
 %Chakrabarti2001_From_effective_response_to_PBG.pdf
+%	scanning the a/λ ratio of SRR array, "medium progressively becomes less homogenizable", "Bragg scattering ... becomes the dominant"
 %Chan2003-PBG_from_stack_of_PIM_and_NIM.pdf
 %Chen2005_Dispersion_of_defect_modes_in_PBG_from_DNG-DPS.pdf
 %Jiang2004-Props_of_1D_PhC_containing_SNG.pdf
@@ -1363,7 +1364,11 @@ existence of effective parameters
 Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
 
 
+
 Effective parameters
+
+%Chakrab.: The homogenizable metamaterials were assigned an effective permeability using the procedure described by Koschny et al [16]
+%[16] Th Koschny, P Markoš, D R Smith and C M Soukolis, Phys. Rev. B65, 195104 (2002)
 
 ref Homogenisation issues - response to our paper from OpEx
 \cite{rockstuhl2008transition}
